--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,22 @@
+.App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 ul {
     display: flex;
     gap: 5px;
+    padding: 0;
 }
 li {
     padding: 0;
     margin: 0;
     list-style: none;
+}
+.unControlledRating {
+    gap: 20px;
+}
+.unControlledRating > li {
+    cursor: pointer;
 }
